# RuthAutomation

./: .gitignore  CMakeLists.txt  requirements.txt  scripts.txt
src/cpp/: main.cpp
src/python/: config.example.yaml  main.py  test_ruth.py
src/python/logs/: ruth_system.jsonl
src/python/ruth/: brain.py  core.py  ears.py  eyes.py  settings.py
tests/: check_voices.py  test_ruth.py  test_selenium_diagnostic.py
